--- a/helm/etl/templates/elasticsearch-deployment.yaml
+++ b/helm/etl/templates/elasticsearch-deployment.yaml
@@ -32,7 +32,8 @@ spec:
               value: "Aa123456"
               {{- end }}
             - name: ES_JAVA_OPTS
-              value: {{ .Values.elasticsearch.ES_JAVA_OPTS | quote }}
+              # -Dlog4j2.formatMsgNoLookups=true is required to mitigate CVE-2021-44228
+              value: {{ printf "-Dlog4j2.formatMsgNoLookups=true %s" .Values.elasticsearch.ES_JAVA_OPTS | quote }}
           volumeMounts:
             - name: data
               mountPath: /usr/share/elasticsearch/data
